# shadow

./: .env.example  .gitignore  Arcium.toml  Cargo.toml  README.md
apps/web/: next.config.ts  package.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/api/auth/session/: route.ts
apps/web/src/app/api/callback/: route.ts
apps/web/src/app/api/token-info/[mint]/: route.ts
apps/web/src/app/docs/: page.tsx
apps/web/src/app/docs/api-reference/: page.tsx
apps/web/src/app/docs/examples/: page.tsx
apps/web/src/app/docs/getting-started/: page.tsx
apps/web/src/components/: AssetSelector.tsx  AuctionCard.tsx  AuctionManagementModal.tsx  CreateAuctionModal.tsx  Dashboard.tsx  NFTAssetViewer.tsx  NotificationsModal.tsx  NotificationsPanel.tsx  SettingsModal.tsx  WalletAuthButton.tsx  WalletButton.tsx
apps/web/src/context/: ShadowProtocolContext.tsx
apps/web/src/idl/: shadow_protocol.json
apps/web/src/lib/: arciumMPC.ts  shadowProtocol.ts  shadow_protocol.json
apps/web/src/utils/: transaction.ts
encrypted-ixs/: Cargo.toml
encrypted-ixs/src/: batch_settlement.rs  dutch_auction.rs  sealed_bid.rs
